@@ -1,7 +1,7 @@
 Package: condvis
 Type: Package
 Title: Conditional Visualization for Statistical Models
-Version: 0.3-4
+Version: 0.3-5.9999
 Date: 2016-08-04
 Authors@R: c(
   person("Mark", "O'Connell", email = "mark.oconnell@maths.nuim.ie",
