@@ -20,7 +20,7 @@ Conditional Visualization for Statistical Models
   \tabular{ll}{
     Package: \tab condvis\cr
     Type: \tab Package\cr
-    Version: \tab 0.3-4\cr
+    Version: \tab 0.3-5.9999\cr
     Date: \tab 2016-08-04\cr
     License: \tab GPL (>= 2)\cr
   }
