@@ -7,6 +7,7 @@ News
 Version 0.3-5
   * pass plotting parameters for models from top-level `ceplot` call. See
     parameter `modelpar`.
+  * allow `xlim` and `ylim` to be passed to section plot produced by `plotxs`.  
 
 Version 0.3-4 2016-08-04
   * fixed incorrect parameter names in demo files.
